arregle los links del navegador, el formulario y lo centré en la pantalla

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -14,23 +14,26 @@
         <header>
             <h1>Jennifer Judith Goijman</h1>
         </header>
+
         <nav>
             <div class="menu">
-                <div class="elementoMenu">
-                    <a href="index.html">Inicio</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="skills.html">Skill Soft</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="contacto.html">Contacto</a>
-                </div>
+                <a href="index.html">
+                    <div class="elementoMenu">Inicio</div>
+                </a>
+                <a href="skills.html">
+                    <div class="elementoMenu">Skills Soft</div>
+                </a>
+                <a href="contacto.html">
+                    <div class="elementoMenu">Contacto</div>
+                </a>
             </div>
         </nav>
+
         <br>
         <div id="boxGeneralito">
             <div id="box1">
-                <p>Puedes ponerte en contacto a través de las redes sociales que figuran debajo o completando el formulario a tu derecha y responderé a la brevedad.</p>
+                <p>Puedes ponerte en contacto a través de las redes sociales que figuran debajo o completando el
+                    formulario a tu derecha y responderé a la brevedad.</p>
             </div>
             <div id="box2">
                 <form action="">
@@ -40,33 +43,34 @@
                     </div>
                     <div class="datos">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" placeholder="Email" required>
+                        <input type="email" name="email" placeholder="Email" required>
                     </div>
                     <div class="datos">
                         <label for="phone">Teléfono:</label>
-                        <input type="tel" name="phone" id="phone" placeholder="Teléfono" required>
+                        <input type="tel" name="phone" placeholder="Teléfono" required>
                     </div>
                     <div class="datos">
                         <label for="message">Mensaje:</label>
                         <textarea name="message" rows="5" placeholder="Mensaje"></textarea>
                     </div>
-                    <div class="datos">
+                    <div class="datos2">
                         <input type="submit" id="aceptar" value="Aceptar">
                     </div>
                 </form>
             </div>
         </div>
         <hr>
+
         <footer>
             <div class="social">
                 <a href="https://www.facebook.com/jennifer.goijman"><img class="elementoSocial" src="/img/facebook.png"
-                        alt=""></a>
+                        alt="Logo Facebook"></a>
                 <a href="https://twitter.com/jennifergoijman"><img class="elementoSocial" src="/img/twitter.png"
-                        alt=""></a>
+                        alt="Logo Twitter"></a>
                 <a href="https://www.instagram.com/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/instagram.png" alt=""></a>
+                        src="/img/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.linkedin.com/in/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/linkedin.png" alt=""></a>
+                        src="/img/linkedin.png" alt="Logo LinkedIn"></a>
             </div>
         </footer>
     </div>
