--- a/html/index.html
+++ b/html/index.html
@@ -14,40 +14,44 @@
         <header>
             <h1>Jennifer Judith Goijman</h1>
         </header>
+
         <nav>
             <div class="menu">
-                <div class="elementoMenu">
-                    <a href="index.html">Inicio</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="skills.html">Skill Soft</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="contacto.html">Contacto</a>
-                </div>
+                <a href="index.html">
+                    <div class="elementoMenu">Inicio</div>
+                </a>
+                <a href="skills.html">
+                    <div class="elementoMenu">Skills Soft</div>
+                </a>
+                <a href="contacto.html">
+                    <div class="elementoMenu">Contacto</div>
+                </a>
             </div>
         </nav>
+
+        <img src="../img/Foto CV.JPG" alt="Foto - JenniferGoijman" class="fotoCV">
+
         <br>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor animi possimus aut facilis in officia non
-            accusamus obcaecati nostrum voluptatibus cum modi eveniet, quibusdam sequi nulla perferendis labore vero
-            necessitatibus repellendus dolore consectetur debitis expedita? Quod recusandae perspiciatis animi dolores
-            ex excepturi illum quidem natus quia, dignissimos quasi commodi sequi in minima aliquid vero suscipit
-            mollitia amet possimus modi. Quibusdam quidem dolore numquam explicabo sint? Aperiam iusto hic a sit
-            repudiandae libero autem quisquam tempore debitis, ratione laborum, excepturi odit at nostrum dicta
-            necessitatibus ab nobis laboriosam commodi iste facere facilis natus vel tenetur? Voluptate laudantium
-            dolores sint deserunt qui.</p>
+        <div class="education">
+            <p>Bachiller técnico con Orientación en Informática y Medios de la Comunicación Digitales</p>
+            <p>- Escuelas Técnicas ORT (Argentina)</p><br>
+            <p>Licenciatura en Psicología</p>
+            <p>- Universidad de Buenos Aires (Argentina)</p><br>
+            <p>Actualmente soy alumna del Bootcamp Full Stack Developer de GeeksHubs en Madrid.</p>
+        </div>
         <br>
         <hr>
+
         <footer>
             <div class="social">
                 <a href="https://www.facebook.com/jennifer.goijman"><img class="elementoSocial" src="/img/facebook.png"
-                        alt=""></a>
+                        alt="Logo Facebook"></a>
                 <a href="https://twitter.com/jennifergoijman"><img class="elementoSocial" src="/img/twitter.png"
-                        alt=""></a>
+                        alt="Logo Twitter"></a>
                 <a href="https://www.instagram.com/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/instagram.png" alt=""></a>
+                        src="/img/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.linkedin.com/in/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/linkedin.png" alt=""></a>
+                        src="/img/linkedin.png" alt="Logo LinkedIn"></a>
             </div>
         </footer>
     </div>
