--- a/html/skills.html
+++ b/html/skills.html
@@ -14,39 +14,52 @@
         <header>
             <h1>Jennifer Judith Goijman</h1>
         </header>
+
         <nav>
             <div class="menu">
-                <div class="elementoMenu">
-                    <a href="index.html">Inicio</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="skills.html">Skill Soft</a>
-                </div>
-                <div class="elementoMenu">
-                    <a href="contacto.html">Contacto</a>
-                </div>
+                <a href="index.html">
+                    <div class="elementoMenu">Inicio</div>
+                </a>
+                <a href="skills.html">
+                    <div class="elementoMenu">Skills Soft</div>
+                </a>
+                <a href="contacto.html">
+                    <div class="elementoMenu">Contacto</div>
+                </a>
             </div>
         </nav>
+
         <br>
-        <p>Tecnologias utilizadas:</p>
-        <br>
+        <p>Tecnologías utilizadas:</p><br>
         <div class="skills">
-            <img class="elementoSkillsV" src="/img/html.png" alt="">
-            <img class="elementoSkillsV" src="/img/css.png" alt="">
-            <img class="elementoSkillsH" src="/img/github.png" alt="">
+            <img class="elementoSkillsV" src="/img/html.png" alt="Logo HTML5">
+            <img class="elementoSkillsV" src="/img/css.png" alt="Logo CSS3">
+            <img class="elementoSkillsV" src="/img/js.png" alt="Logo JS">
+            <a href="https://git-scm.com/"><img class="elementoSkillsV" src="/img/git.png" alt="Logo Git"></a>
+            <a href="https://es.reactjs.org/"><img class="elementoSkillsV" src="/img/react.png" alt="Logo React"></a>
+            <a href="https://angular.io/"><img class="elementoSkillsV" src="/img/angular.png" alt="Logo Angular"></a>
+            <a href="https://www.mongodb.com/es"><img class="elementoSkillsH" src="/img/mongo.png"
+                    alt="Logo MongoDB"></a>
+            <a href="https://laravel.com/"><img class="elementoSkillsV" src="/img/laravel.png" alt="Logo Laravel"></a>
+            <a href="https://www.php.net/"><img class="elementoSkillsH" src="/img/php.png" alt="Logo PHP"></a>
+            <a href="https://jquery.com/"><img class="elementoSkillsV" src="/img/jquery.png" alt="Logo jQuery"></a>
+            <a href="https://www.typescriptlang.org/"><img class="elementoSkillsV" src="/img/typescript.png"
+                alt="Logo TypeScript"></a>
+            <a href="https://vuejs.org/"><img class="elementoSkillsV" src="/img/vuejs.png" alt="Logo Vuejs"></a>
         </div>
         <br>
         <hr>
+
         <footer>
             <div class="social">
                 <a href="https://www.facebook.com/jennifer.goijman"><img class="elementoSocial" src="/img/facebook.png"
-                        alt=""></a>
+                        alt="Logo Facebook"></a>
                 <a href="https://twitter.com/jennifergoijman"><img class="elementoSocial" src="/img/twitter.png"
-                        alt=""></a>
+                        alt="Logo Twitter"></a>
                 <a href="https://www.instagram.com/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/instagram.png" alt=""></a>
+                        src="/img/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.linkedin.com/in/jennifergoijman/"><img class="elementoSocial"
-                        src="/img/linkedin.png" alt=""></a>
+                        src="/img/linkedin.png" alt="Logo LinkedIn"></a>
             </div>
         </footer>
     </div>
