agregué logos de tecnologías

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -17,13 +17,13 @@
 
         <nav>
             <div class="menu">
-                <a href="index.html">
+                <a href="index.html" id="menu">
                     <div class="elementoMenu">Inicio</div>
                 </a>
-                <a href="skills.html">
-                    <div class="elementoMenu">Skills Soft</div>
+                <a href="skills.html" id="menu">
+                    <div class="elementoMenu">Tecnologías</div>
                 </a>
-                <a href="contacto.html">
+                <a href="contacto.html" id="menu">
                     <div class="elementoMenu">Contacto</div>
                 </a>
             </div>
@@ -35,7 +35,7 @@
                 <p>Puedes ponerte en contacto a través de las redes sociales que figuran debajo o completando el
                     formulario a tu derecha y responderé a la brevedad.</p>
             </div>
-            <div id="box2">
+            <div id="box2"> 
                 <form action="">
                     <div class="datos">
                         <label for="name">Nombre:</label>
