--- a/html/index.html
+++ b/html/index.html
@@ -17,13 +17,13 @@
 
         <nav>
             <div class="menu">
-                <a href="index.html">
+                <a href="index.html" id="menu">
                     <div class="elementoMenu">Inicio</div>
                 </a>
-                <a href="skills.html">
-                    <div class="elementoMenu">Skills Soft</div>
+                <a href="skills.html" id="menu">
+                    <div class="elementoMenu">Tecnologías</div>
                 </a>
-                <a href="contacto.html">
+                <a href="contacto.html" id="menu">
                     <div class="elementoMenu">Contacto</div>
                 </a>
             </div>
@@ -33,11 +33,14 @@
 
         <br>
         <div class="education">
-            <p>Bachiller técnico con Orientación en Informática y Medios de la Comunicación Digitales</p>
-            <p>- Escuelas Técnicas ORT (Argentina)</p><br>
+            <p>Bachiller técnico con Orientación en </p>
+            <p>Informática y Medios de la Comunicación Digitales</p>
+            <p> - <a href="https://www.ort.edu.ar/" id="edu">Escuelas Técnicas ORT (Argentina).</a></p><br>
             <p>Licenciatura en Psicología</p>
-            <p>- Universidad de Buenos Aires (Argentina)</p><br>
-            <p>Actualmente soy alumna del Bootcamp Full Stack Developer de GeeksHubs en Madrid.</p>
+            <p> - <a href="http://www.uba.ar/" id="edu">Universidad de Buenos Aires (Argentina).</a></p><br>
+            <p>Actualmente soy alumna del Bootcamp Full Stack Developer de <a href="https://geekshubs.com/"
+                    id="edu">GeeksHubs</a> en Madrid (España).</p>
+                    <br>
         </div>
         <br>
         <hr>
