--- a/html/skills.html
+++ b/html/skills.html
@@ -17,13 +17,13 @@
 
         <nav>
             <div class="menu">
-                <a href="index.html">
+                <a href="index.html" id="menu">
                     <div class="elementoMenu">Inicio</div>
                 </a>
-                <a href="skills.html">
-                    <div class="elementoMenu">Skills Soft</div>
+                <a href="skills.html" id="menu">
+                    <div class="elementoMenu">Tecnologías</div>
                 </a>
-                <a href="contacto.html">
+                <a href="contacto.html" id="menu">
                     <div class="elementoMenu">Contacto</div>
                 </a>
             </div>
@@ -32,20 +32,21 @@
         <br>
         <p>Tecnologías utilizadas:</p><br>
         <div class="skills">
-            <img class="elementoSkillsV" src="/img/html.png" alt="Logo HTML5">
-            <img class="elementoSkillsV" src="/img/css.png" alt="Logo CSS3">
-            <img class="elementoSkillsV" src="/img/js.png" alt="Logo JS">
+            <a href="https://www.w3.org/"><img class="elementoSkillsV" src="/img/html.png" alt="Logo HTML5"></a>
+            <a href="https://www.w3.org/"><img class="elementoSkillsV" src="/img/css.png" alt="Logo CSS3"></a>
+            <a href="https://www.w3.org/"><img class="elementoSkillsV" src="/img/js.png" alt="Logo JS"></a>
             <a href="https://git-scm.com/"><img class="elementoSkillsV" src="/img/git.png" alt="Logo Git"></a>
             <a href="https://es.reactjs.org/"><img class="elementoSkillsV" src="/img/react.png" alt="Logo React"></a>
             <a href="https://angular.io/"><img class="elementoSkillsV" src="/img/angular.png" alt="Logo Angular"></a>
+            <a href="https://www.mysql.com/"><img class="elementoSkillsV" src="/img/mysql.png" alt="Logo MySQL"></a>
             <a href="https://www.mongodb.com/es"><img class="elementoSkillsH" src="/img/mongo.png"
                     alt="Logo MongoDB"></a>
             <a href="https://laravel.com/"><img class="elementoSkillsV" src="/img/laravel.png" alt="Logo Laravel"></a>
             <a href="https://www.php.net/"><img class="elementoSkillsH" src="/img/php.png" alt="Logo PHP"></a>
             <a href="https://jquery.com/"><img class="elementoSkillsV" src="/img/jquery.png" alt="Logo jQuery"></a>
             <a href="https://www.typescriptlang.org/"><img class="elementoSkillsV" src="/img/typescript.png"
-                alt="Logo TypeScript"></a>
-            <a href="https://vuejs.org/"><img class="elementoSkillsV" src="/img/vuejs.png" alt="Logo Vuejs"></a>
+                    alt="Logo TypeScript"></a>
+            <a href="https://nodejs.org/es/"><img class="elementoSkillsV" src="/img/nodejs.png" alt="Logo NodeJS"></a>
         </div>
         <br>
         <hr>
