agregué pestaña Sobre Mi

--- a/html/skills.html
+++ b/html/skills.html
@@ -20,6 +20,9 @@
                 <a href="index.html" id="menu">
                     <div class="elementoMenu">Inicio</div>
                 </a>
+                <a href="sobremi.html" id="menu">
+                    <div class="elementoMenu">Sobre Mi</div>
+                </a>
                 <a href="skills.html" id="menu">
                     <div class="elementoMenu">Tecnologías</div>
                 </a>
