--- a/html/sobremi.html
+++ b/html/sobremi.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Jennifer Goijman</title>
+    <title>Portfolio - Contacto</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Didact+Gothic&display=swap" rel="stylesheet">
 </head>
@@ -32,20 +32,15 @@
             </div>
         </nav>
 
-        <img src="../img/Foto CV.JPG" alt="Foto - JenniferGoijman" class="fotoCV">
-
         <br>
-        <div class="education">
-            <p>Bachiller técnico con Orientación en </p>
-            <p>Informática y Medios de la Comunicación Digitales</p>
-            <p> - <a href="https://www.ort.edu.ar/" id="edu">Escuelas Técnicas ORT (Argentina).</a></p><br>
-            <p>Licenciatura en Psicología</p>
-            <p> - <a href="http://www.uba.ar/" id="edu">Universidad de Buenos Aires (Argentina).</a></p><br>
-            <p>Actualmente soy alumna del Bootcamp Full Stack Developer de <a href="https://geekshubs.com/"
-                    id="edu">GeeksHubs</a> en Madrid (España).</p>
-                    <br>
+        <div id="boxGeneralito">
+            <div id="box1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi natus possimus autem rerum aut tempora perspiciatis saepe eius atque quidem reprehenderit quo repellendus alias dolor porro, delectus minima! Perspiciatis illo numquam repellat aliquid accusamus quibusdam nesciunt cum rem, quas ea similique. Culpa, harum nemo!</p>
+            </div>
+            <div id="box2"> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi natus possimus autem rerum aut tempora perspiciatis saepe eius atque quidem reprehenderit quo repellendus alias dolor porro, delectus minima! Perspiciatis illo numquam repellat aliquid accusamus quibusdam nesciunt cum rem, quas ea similique. Culpa, harum nemo!</p>
+            </div>
         </div>
-        <br>
         <hr>
 
         <footer>
