--- a/html/contacto.html
+++ b/html/contacto.html
@@ -20,7 +20,9 @@
                 <a href="index.html" id="menu">
                     <div class="elementoMenu">Inicio</div>
                 </a>
-                <a href="skills.html" id="menu">
+                <a href="sobremi.html" id="menu">
+                    <div class="elementoMenu">Sobre Mi</div>
+                </a>                <a href="skills.html" id="menu">
                     <div class="elementoMenu">Tecnologías</div>
                 </a>
                 <a href="contacto.html" id="menu">
