agregué contenido a 'Sobre Mi' y modifiqué el Inicio

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <nav>
             <div class="menu">
                 <a href="index.html" id="menu">
-                    <div class="elementoMenu">Inicio</div>
+                    <div class="elementoMenu"><b>Inicio</b></div>
                 </a>
                 <a href="sobremi.html" id="menu">
                     <div class="elementoMenu">Sobre Mi</div>
@@ -32,18 +32,33 @@
             </div>
         </nav>
 
-        <img src="../img/Foto CV.JPG" alt="Foto - JenniferGoijman" class="fotoCV">
-
         <br>
-        <div class="education">
-            <p>Bachiller técnico con Orientación en </p>
-            <p>Informática y Medios de la Comunicación Digitales</p>
-            <p> - <a href="https://www.ort.edu.ar/" id="edu">Escuelas Técnicas ORT (Argentina).</a></p><br>
-            <p>Licenciatura en Psicología</p>
-            <p> - <a href="http://www.uba.ar/" id="edu">Universidad de Buenos Aires (Argentina).</a></p><br>
-            <p>Actualmente soy alumna del Bootcamp Full Stack Developer de <a href="https://geekshubs.com/"
-                    id="edu">GeeksHubs</a> en Madrid (España).</p>
-                    <br>
+        <div id="boxGeneralito">
+            <div id="box1Inicio">
+                <div class="inicio">
+                    <img src="/img/name.png" alt="Icono Nombre" class="elementoInicio">
+                    Jennifer Judith Goijman
+                </div>
+                <div class="inicio">
+                    <img src="/img/pastel.png" alt="Nombre" class="elementoInicio">
+                    30 de agosto de 1991
+                </div>
+                <div class="inicio">
+                    <img src="/img/phone.png" alt="Telefono" class="elementoInicio">
+                    +346449433349
+                </div>
+                <div class="inicio">
+                    <img src="/img/location.png" alt="Ubicación" class="elementoInicio">
+                    Madrid, España
+                </div>
+                <div class="inicio">
+                    <img src="/img/mail.png" alt="Email" class="elementoInicio">
+                    jgoijman@gmail.com
+                </div>
+            </div>
+            <div id="box2Inicio">
+                <img src="../img/Foto CV.JPG" alt="Foto - JenniferGoijman" class="fotoCV">
+            </div>
         </div>
         <br>
         <hr>
