--- a/html/sobremi.html
+++ b/html/sobremi.html
@@ -21,7 +21,7 @@
                     <div class="elementoMenu">Inicio</div>
                 </a>
                 <a href="sobremi.html" id="menu">
-                    <div class="elementoMenu">Sobre Mi</div>
+                    <div class="elementoMenu"><b>Sobre Mi</b></div>
                 </a>
                 <a href="skills.html" id="menu">
                     <div class="elementoMenu">Tecnologías</div>
@@ -35,12 +35,20 @@
         <br>
         <div id="boxGeneralito">
             <div id="box1">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi natus possimus autem rerum aut tempora perspiciatis saepe eius atque quidem reprehenderit quo repellendus alias dolor porro, delectus minima! Perspiciatis illo numquam repellat aliquid accusamus quibusdam nesciunt cum rem, quas ea similique. Culpa, harum nemo!</p>
+                <p>Me defino como una persona práctica, organizada y versátil. Me gusta trabajar en equipo, adquirir
+                    nuevos conocimientos y desafiarme constantemente. </p><br>
+                <p>Luego de terminar el <a href="https://www.ort.edu.ar/" id="edu">Bachillerato con orientación en Informática</a>, obtuve la <a href="http://www.uba.ar/" id="edu">Licenciatura en Psicología</a>
+                    mientras me desenvolvía profesionalmente en el mundo IT.</p>
             </div>
-            <div id="box2"> 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi natus possimus autem rerum aut tempora perspiciatis saepe eius atque quidem reprehenderit quo repellendus alias dolor porro, delectus minima! Perspiciatis illo numquam repellat aliquid accusamus quibusdam nesciunt cum rem, quas ea similique. Culpa, harum nemo!</p>
+            <div id="box2">
+                <p>En el último año estuve trabajando en diferentes países de Europa en el área de servicio, lo que me
+                    permitió desarrollar mi flexibilidad, mejorar mi fluidez en inglés y motivarme a estudiar alemán.
+                </p><br>
+                <p>Mi objetivo para el 2020 es reciclarme profesionalmente, es por ello que estoy realizando el Bootcamp
+                    Full Stack Developer de GeeksHubs en Madrid. </p>
             </div>
         </div>
+        <br>
         <hr>
 
         <footer>
