--- a/html/contacto.html
+++ b/html/contacto.html
@@ -22,11 +22,12 @@
                 </a>
                 <a href="sobremi.html" id="menu">
                     <div class="elementoMenu">Sobre Mi</div>
-                </a>                <a href="skills.html" id="menu">
+                </a>
+                <a href="skills.html" id="menu">
                     <div class="elementoMenu">Tecnologías</div>
                 </a>
                 <a href="contacto.html" id="menu">
-                    <div class="elementoMenu">Contacto</div>
+                    <div class="elementoMenu"><b>Contacto</b></div>
                 </a>
             </div>
         </nav>
