--- a/html/skills.html
+++ b/html/skills.html
@@ -24,7 +24,7 @@
                     <div class="elementoMenu">Sobre Mi</div>
                 </a>
                 <a href="skills.html" id="menu">
-                    <div class="elementoMenu">Tecnologías</div>
+                    <div class="elementoMenu"><b>Tecnologías</b></div>
                 </a>
                 <a href="contacto.html" id="menu">
                     <div class="elementoMenu">Contacto</div>
