alineación de footer

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -35,10 +35,9 @@
         <br>
         <div id="boxGeneralito">
             <div id="box1">
-                <p>Puedes ponerte en contacto a través de las redes sociales que figuran debajo o completando el
-                    formulario a tu derecha y responderé a la brevedad.</p>
+                <p>Puedes ponerte en contacto completando el formulario a tu derecha y responderé a la brevedad.</p>
             </div>
-            <div id="box2"> 
+            <div id="box2">
                 <form action="">
                     <div class="datos">
                         <label for="name">Nombre:</label>
