--- a/html/sobremi.html
+++ b/html/sobremi.html
@@ -37,7 +37,8 @@
             <div id="box1">
                 <p>Me defino como una persona práctica, organizada y versátil. Me gusta trabajar en equipo, adquirir
                     nuevos conocimientos y desafiarme constantemente. </p><br>
-                <p>Luego de terminar el <a href="https://www.ort.edu.ar/" id="edu">Bachillerato con orientación en Informática</a>, obtuve la <a href="http://www.uba.ar/" id="edu">Licenciatura en Psicología</a>
+                <p>Luego de terminar el <a href="https://www.ort.edu.ar/" id="edu">Bachillerato con orientación en
+                        Informática</a>, obtuve la <a href="http://www.uba.ar/" id="edu">Licenciatura en Psicología</a>
                     mientras me desenvolvía profesionalmente en el mundo IT.</p>
             </div>
             <div id="box2">
@@ -48,7 +49,7 @@
                     Full Stack Developer de GeeksHubs en Madrid. </p>
             </div>
         </div>
-        <br>
+        <br>        
         <hr>
 
         <footer>
