--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Jennifer Goijman</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/script.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Didact+Gothic&display=swap" rel="stylesheet">
 </head>
 
@@ -17,67 +18,33 @@
 
         <nav>
             <div class="menu">
-                <a href="index.html" id="menu">
-                    <div class="elementoMenu"><b>Inicio</b></div>
-                </a>
-                <a href="sobremi.html" id="menu">
-                    <div class="elementoMenu">Sobre Mi</div>
-                </a>
-                <a href="skills.html" id="menu">
-                    <div class="elementoMenu">Tecnologías</div>
-                </a>
-                <a href="contacto.html" id="menu">
-                    <div class="elementoMenu">Contacto</div>
-                </a>
+                <span class="elementoMenu" id="botonInicio">Inicio</span>
+                <span class="elementoMenu" id="botonSobreMi">Sobre Mi</span>
+                <span class="elementoMenu" id="botonTecnologias">Tecnologías</span>
+                <span class="elementoMenu" id="botonContacto">Contacto</span>
             </div>
         </nav>
+        <br>
 
-        <br>
-        <div id="boxGeneralito">
-            <div id="box1Inicio">
-                <div class="inicio">
-                    <img src="/img/name.png" alt="Icono Nombre" class="elementoInicio">
-                    Jennifer Judith Goijman
-                </div>
-                <div class="inicio">
-                    <img src="/img/pastel.png" alt="Nombre" class="elementoInicio">
-                    30 de agosto de 1991
-                </div>
-                <div class="inicio">
-                    <img src="/img/phone.png" alt="Telefono" class="elementoInicio">
-                    +346449433349
-                </div>
-                <div class="inicio">
-                    <img src="/img/location.png" alt="Ubicación" class="elementoInicio">
-                    Madrid, España
-                </div>
-                <div class="inicio">
-                    <img src="/img/mail.png" alt="Email" class="elementoInicio">
-                    jgoijman@gmail.com
-                </div>
-            </div>
-            <div id="box2Inicio">
-                <img src="../img/Foto CV.JPG" alt="Foto - JenniferGoijman" class="fotoCV">
-            </div>
-        </div>
-        
-        <br>
-        <br>
+        <main>
+
+        </main>
+
         <br>
         <hr>
-
         <footer>
             <div class="social">
-                <a href="https://www.facebook.com/jennifer.goijman"><img class="elementoSocial" src="/img/facebook.png"
-                        alt="Logo Facebook"></a>
-                <a href="https://twitter.com/jennifergoijman"><img class="elementoSocial" src="/img/twitter.png"
-                        alt="Logo Twitter"></a>
-                <a href="https://www.instagram.com/jennifergoijman/"><img class="elementoSocial"
+                <a href="https://www.facebook.com/jennifer.goijman" target="_blank"><img class="elementoSocial"
+                        src="/img/facebook.png" alt="Logo Facebook"></a>
+                <a href="https://twitter.com/jennifergoijman" target="_blank"><img class="elementoSocial"
+                        src="/img/twitter.png" alt="Logo Twitter"></a>
+                <a href="https://www.instagram.com/jennifergoijman/" target="_blank"><img class="elementoSocial"
                         src="/img/instagram.png" alt="Logo Instagram"></a>
-                <a href="https://www.linkedin.com/in/jennifergoijman/"><img class="elementoSocial"
+                <a href="https://www.linkedin.com/in/jennifergoijman/" target="_blank"><img class="elementoSocial"
                         src="/img/linkedin.png" alt="Logo LinkedIn"></a>
             </div>
         </footer>
+
     </div>
 </body>
 
