--- a/html/index.html
+++ b/html/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Jennifer Goijman</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/script.js" async></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/script.js" async></script>
     <link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Didact+Gothic&display=swap" rel="stylesheet">
 </head>
 
@@ -35,13 +35,13 @@
         <footer>
             <div class="social">
                 <a href="https://www.facebook.com/jennifer.goijman" target="_blank"><img class="elementoSocial"
-                        src="/img/facebook.png" alt="Logo Facebook"></a>
+                        src="../img/facebook.png" alt="Logo Facebook"></a>
                 <a href="https://twitter.com/jennifergoijman" target="_blank"><img class="elementoSocial"
-                        src="/img/twitter.png" alt="Logo Twitter"></a>
+                        src="../img/twitter.png" alt="Logo Twitter"></a>
                 <a href="https://www.instagram.com/jennifergoijman/" target="_blank"><img class="elementoSocial"
-                        src="/img/instagram.png" alt="Logo Instagram"></a>
+                        src="../img/instagram.png" alt="Logo Instagram"></a>
                 <a href="https://www.linkedin.com/in/jennifergoijman/" target="_blank"><img class="elementoSocial"
-                        src="/img/linkedin.png" alt="Logo LinkedIn"></a>
+                        src="../img/linkedin.png" alt="Logo LinkedIn"></a>
             </div>
         </footer>
 
