acomodando elementos para que se visualicen movil

--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="boxGeneral">
         <header>
-            <h1>Jennifer Judith Goijman</h1>
+            <h1>Jennifer Goijman</h1>
         </header>
 
         <nav>
@@ -25,13 +25,11 @@
                 <span class="elementoMenu" id="botonContacto">Contacto</span>
             </div>
         </nav>
-        <br>
-
+        
         <main>
 
         </main>
 
-        <br>
         <hr>
         <footer>
             <div class="social">
