modifiqué la barra de navegación con Bootstrap

--- a/html/index.html
+++ b/html/index.html
@@ -17,12 +17,23 @@
             <h1>Jennifer Goijman</h1>
         </header>
 
-        <nav>
-            <div class="menu">
-                <span class="elementoMenu" id="botonInicio">Inicio</span>
-                <span class="elementoMenu" id="botonSobreMi">Sobre Mi</span>
-                <span class="elementoMenu" id="botonTecnologias">Tecnologías</span>
-                <span class="elementoMenu" id="botonContacto">Contacto</span>
+        <nav class="navbar navbar-expand-sm">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <span class="nav-link elementoMenu" id="botonInicio">Inicio</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link elementoMenu" id="botonSobreMi">Sobre Mi</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link elementoMenu" id="botonTecnologias">Tecnologías</span>
+                    </li>
+                    <li class="nav-item">
+                        <span class="nav-link elementoMenu" id="botonContacto">Contacto</span>
+                    </li>
+                </ul>
             </div>
         </nav>
         
