saque h1 para mobile y lo puse en la navbar

--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,7 @@
         </header>
 
         <nav class="navbar navbar-expand-sm">
+            <a class="navbar-brand" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" href="#">Jennifer Goijman</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
